# Back-end/routes/authRoutes.js
@@ -9,7 +9,8 @@ const {
   microsoftCallback,
   status,
   logout,
-  updateProfile
+  updateProfile,
+  getProfile
 } = require('../controllers/authController');
 const { authenticate, requireAuth } = require('../middlewares/authMiddleware');
 const { validate, profileUpdateSchema } = require('../middlewares/validate');
@@ -45,6 +46,7 @@ router.get('/microsoft', microsoftAuth);
 router.get('/microsoft/callback', microsoftCallback);
 router.get('/status', authenticate, status);
 router.post('/logout', logout);
+router.get('/profile', authenticate, requireAuth, getProfile);
 router.post('/profile/update', authenticate, requireAuth, profilePicUpload.single('picture'), validate(profileUpdateSchema), updateProfile);
 
 module.exports = router;
